apps/templates/platform/sync/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
   name: platform-sync-ingress
   annotations:
      kubernetes.io/ingress.class: 'nginx'
      nginx.ingress.kubernetes.io/proxy-body-size: 500m
      nginx.ingress.kubernetes.io/proxy-connect-timeout: '6000'
      nginx.ingress.kubernetes.io/proxy-send-timeout: '6000'
      nginx.ingress.kubernetes.io/proxy-read-timeout: '6000'
      nginx.ingress.kubernetes.io/proxy-next-upstream-timeout: '6000'
      nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
   rules:
      - host: 
        http:
           paths:
              - path: /sync/(.*)
                pathType: Prefix
                backend:
                   service:
                      name: platform-sync-clusterip-service
                      port:
                         number: 4000
